[package]
name = "maze-cli"
version = "0.1.0"
authors = ["animate-object <alexander.f.prinsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { git = "https://github.com/animate-object/mazes" }
structopt = "0.3.8"
exitfailure = "0.5.1"
failure = "0.1.6"
